--- a/ ttdc --username trevisthomas/River/war/css/common/icons/icons-common.css
+++ b/ ttdc --username trevisthomas/River/war/css/common/icons/icons-common.css
@@ -7,3 +7,4 @@
 .tt-icon-thumbsup{ background-position: -80 0; }
 .tt-icon-thumbsdown{ background-position: -96 0; }
 .tt-icon-common-deleted{ background-position: -112 0; }
+.tt-icon-common-star{ background-position: 0 -16px; }
