--- a/trunk/ ttdc --username trevisthomas/River/war/css/structure.css
+++ b/trunk/ ttdc --username trevisthomas/River/war/css/structure.css
@@ -1,4 +1,4 @@
-.tt-view-container{width:940px; text-align:center; margin: 0 auto; overflow: hidden;}
+.tt-view-container{width:1000px; text-align:center; margin: 0 auto; overflow: hidden;}
 
 body{font-family: Arial, Arial, Helvetica, sans-serif;}
 
@@ -22,13 +22,24 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-home-left{ width: 220px;}
 .tt-home-tabContainer{margin: 4px 0 10px 0; width: 800px;}
 
-.tt-post-child{margin: 1px 1px 1px 0px; border-width: 1px; border-style:solid; width:510px; min-height:34px;}
+.tt-split-home-main{ width:555px; padding: 0 12;}
+.tt-split-home-right{ }
+.tt-split-container{margin: 4px 0 10px 0; }
+
+.tt-post-child{margin: 1px 1px 1px 0px; border-width: 1px; border-style:solid; width:460px; min-height:34px;}
 .tt-forum-post{margin: 1px 1px 4px; border-width: 0 0 1px 0; border-style: solid; }
 
-.tt-post{width: 553px; margin-bottom: 0px; border:1px solid; overflow: auto;}
+.tt-root-post,
+.tt-review-summary-post{width:400px; margin-bottom: 0px; border:1px solid; overflow: auto;}
+.tt-post{width: 500px; margin-bottom: 0px; border:1px solid; overflow: auto;}
 .tt-post-container-header{overflow: auto;}
 .tt-post-container-footer{}
 
+.tt-root-post-summary{ float: left; margin: 0 20px 0 2px;}
+
+.tt-calendarPair-right,
+.tt-calendarPair-left{float:left; margin: 0 auto; width: 200px;}
+.tt-calendarPair{width: 400px; padding:0; margin: 0;}
 .tt-forum-names,
 .tt-search-results{width: 600px; text-align:center; margin: 0 auto;}
 	
@@ -51,8 +62,15 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-text-small{font-size:10px;}
 
 
-.tt-post-detail{width: 100%;}
-	
+
+.tt-post-detail{}
+
+
+.tt-post-tab,
+.tt-tagList-forum{padding: 0 0 0 10px;}
+
+
+.tt-tagList-forum,
 .tt-user-list-table,	
 .tt-forum-names,
 .tt-traffic-login,
@@ -62,6 +80,8 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-post-expanded-creator,
 .tt-post-panel-head-detail,
 .tt-text-normal{font-size:12px;}
+
+.tt-tagList-forum{font-weight: bold;}
 
 .tt-welcome-calendar{line-height: 22px; font-size:14px;}
 
@@ -78,7 +98,7 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-text-huge{font-size:22px; font-weight: 700;}
 
 .tt-forum-post-title,
-.tt-post-panel-head-title{font-size: 16px;}
+.tt-post-panel-head-title{font-size: 16px; font-weight: bolder;}
 
 
 
@@ -91,17 +111,21 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 
 .tt-search-panel-adv,
 .tt-movie-editor,
-.tt-comment-editor{border: 1px solid; width:500; padding: 2px 10px;}
+.tt-comment-editor{border: 1px solid; padding: 2px 10px;}
 .tt-comment-toolbar{margin: 2px 0;}
 .tt-comment-editor-buttons{float: right; margin: 3px;}
 
+
 .tt-post-panel-content{ width:100%; clear:both;}
+.tt-root-post-panel-content{padding: 6px 0 0 0;}
+
 .tt-post-panel-head{border-style: solid; border-width: 0 0 1px 0;}
 .tt-post-panel-head-date,
 .tt-post-panel-head-detail{vertical-align: middle;}
 	
 .tt-post-expanded{ border-width: 1px; border-style:solid; margin: 2px 0; padding:0px;}
 
+.tt-post-spacer,
 .tt-post-conversation{ margin: 0 0 20px 0;}
 .tt-options-button{border: 1px solid; padding:2px;}
 .tt-post-footer{text-align: right;}
@@ -118,7 +142,7 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-topic-topics{}
 
 
-
+.tt-smallMonthPanel,
 .tt-topic-root,
 .tt-forum-main,
 .tt-topic-topics{text-align:center; margin: 0 auto;}
@@ -332,6 +356,11 @@ side effects in non mozilla browsers in the comment creator
 
 .tt-traffic-person{width: 199px; height: 49px; border: 1px solid; margin: 2px 2px;}
 
+.tt-traffic-panel{width: 400px; margin: 0 auto;}
+
+.tt-traffic-avatar-border{border: solid 1px; padding: 4px 2px 10px 2px; margin: 4px 2px; position: relative;}
+.tt-traffic-star{position: relative; left: -2px; top:-14px; width:16px; height:16px; float: left;}
+
 .tt-comment-button{
 	border:1px solid;
 	padding:2px 10px;
@@ -357,7 +386,10 @@ side effects in non mozilla browsers in the comment creator
 
 .tt-active-post-box{text-align:center; margin: 0 auto;}
 
-.tt-reviewSummaryList-header{font-size: 15px; font-weight: bolder;}
+.tt-post-body-header,
+.tt-reviewSummaryList-header{font-size: 14px; font-weight: bold;}
+.tt-reviewSummaryList-header{margin: 0;}
+.tt-reviewSummaryList{margin: 4px 0 0;}
 
 .gwt-PopupPanel { border: 1px solid; padding: 2px; }
 
