--- a/trunk/ ttdc --username trevisthomas/River/war/css/structure.css
+++ b/trunk/ ttdc --username trevisthomas/River/war/css/structure.css
@@ -1,5 +1,3 @@
-.tt-view-container{width:1000px; text-align:center; margin: 0 auto; overflow: hidden;}
-
 body{font-family: Arial, Arial, Helvetica, sans-serif;}
 
 .tt-border{ border:1px black solid;}
@@ -15,24 +13,27 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-graphic-button,
 .tt-textbox-search{font-family: arial, sans-serif;}
 
-.tt-forum-main,
-.tt-topic-root,
-.tt-topic-topics,
-.tt-home-main{ width: 600px;}
+
 .tt-home-left{ width: 220px;}
 .tt-home-tabContainer{margin: 4px 0 10px 0; width: 800px;}
 
-.tt-split-home-main{ width:555px; padding: 0 12;}
+
 .tt-split-home-right{ }
 .tt-split-container{margin: 4px 0 10px 0; }
 
+/*
 .tt-post-child{margin: 1px 1px 1px 0px; border-width: 1px; border-style:solid; width:460px; min-height:34px;}
+
+*/
+
+.tt-post-child{margin: 1px 1px 1px 0px; border-width: 1px; border-style:solid; min-height:34px;}
 .tt-forum-post{margin: 1px 1px 4px; border-width: 0 0 1px 0; border-style: solid; }
+.tt-post-panel-table{width: 100%;}
 
 .tt-root-post,
-.tt-review-summary-post{width:400px; margin-bottom: 0px; border:1px solid; overflow: auto;}
-.tt-post{width: 500px; margin-bottom: 0px; border:1px solid; overflow: auto;}
-.tt-post-container-header{overflow: auto;}
+.tt-review-summary-post{ margin-bottom: 0px; border:1px solid; overflow: auto;}
+
+.tt-post-container-header{width: 100%;}
 .tt-post-container-footer{}
 
 .tt-root-post-summary{ float: left; margin: 0 20px 0 2px;}
@@ -40,8 +41,7 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-calendarPair-right,
 .tt-calendarPair-left{float:left; margin: 0 auto; width: 200px;}
 .tt-calendarPair{width: 400px; padding:0; margin: 0;}
-.tt-forum-names,
-.tt-search-results{width: 600px; text-align:center; margin: 0 auto;}
+
 	
 .tt-text-nano{font-size:7px;}
 
@@ -81,8 +81,6 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-post-panel-head-detail,
 .tt-text-normal{font-size:12px;}
 
-.tt-tagList-forum{font-weight: bold;}
-
 .tt-welcome-calendar{line-height: 22px; font-size:14px;}
 
 .tt-text-normal-bold{font-size:12px; font-weight: bold;}
@@ -98,7 +96,7 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-text-huge{font-size:22px; font-weight: 700;}
 
 .tt-forum-post-title,
-.tt-post-panel-head-title{font-size: 16px; font-weight: bolder;}
+.tt-post-panel-head-title{font-size: 18px;}
 
 
 
@@ -164,7 +162,7 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 
 .tt-pageFooter hr{ height: 1px;}
 
-.tt-post-container,
+
 .tt-plain-post-close,
 .tt-color-calendar-nav,
 .tt-home-tabContainer,
@@ -182,7 +180,7 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-post-fetch-more,
 .tt-movie-list-table,
 .tt-user-list-table,
-.tt-fill{ width: 100%; }
+.tt-fill{ width:100%; }
 
 .tt-fill-both{ height:100%; width:100%;}
 .tt-fill-height{ height:100%;}
@@ -304,7 +302,6 @@ a{outline: none;}
 .tt-search-panel{height:30px; border: solid black 1px; background: gray;}
 */
 .tt-search-panel-adv{}
-.tt-search-panel-outer{margin-right:-40px;}
 
 /*
 .tt-calendar-small-month-dayHasContent{ font: bolder; background-color: #eee}
@@ -320,6 +317,7 @@ a{outline: none;}
 
 
 .tt-fancy-image-border{border: solid 1px; padding: 4px 2px 10px 2px; margin: 4px 2px;}
+.tt-fancy-image-border-small{border: solid 1px; padding: 2px 1px 5px 1px; margin: 2px 1px;}
 .tt-image-border{border: 0;}
 
 
@@ -337,7 +335,7 @@ a{outline: none;}
 
 
 .tt-TabPanel-fullpage{width:85%; margin: 0 auto;}
-.gwt-TabPanel {  }
+.gwt-TabPanel { width:100%; }
 .gwt-TabPanelBottom { border-style: solid; border-width: 1px; overflow: hidden; padding: 1px; margin: 0;}
 
 /*
