--- a/trunk/ ttdc --username trevisthomas/River/war/css/dynamic.css
+++ b/trunk/ ttdc --username trevisthomas/River/war/css/dynamic.css
@@ -1,6 +1,6 @@
 body{text-align:center; margin: 0; padding: 0 20px;}
 .tt-view-container{min-width:1000px; text-align:center; margin: 0 auto; padding: 20px;}
-.tt-post{margin-bottom: 0px; border:1px solid; overflow: auto;}
+.tt-post{margin-bottom: 0px; border:1px solid;}
 .tt-split-home-main{width: 100%; padding: 0 12 0 0;}
 .tt-post-container{width:100%}
 .tt-post-child-container{width:100%;}
