--- a/BoyVsGirl/war/css/bvg.css
+++ b/BoyVsGirl/war/css/bvg.css
@@ -7,6 +7,28 @@
 .footer-mod{
 	background-image:  url("../img/nav-bg_65.png");	
 }
+
+div#footer-block {
+	height: 40px;
+	left: 0;
+	background: url('/img/nav-bg3.png');
+	width: 100%;
+}
+
+div#footer {
+	height: 40px;
+	left: 0;
+}
+
+.footer {
+	line-height: 40px;
+	text-align: center;
+}
+
+.footer A {
+	color: #ccc;
+}
+
 #logo-block{
 	position: absolute;
 	top: 10px;
@@ -19,11 +41,45 @@
 }
 body{
 	background:url("/img/carbon_fibre.png");
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: 12px;
+	color: #aaa;
 }
 
 #container{
 	margin: 10px auto 100px;
-	
+}
+
+.slide-out-div {
+	padding: 20px;
+	width: 475px;
+	background-image: url("/img/alpha70.png");
+	border: 0px solid #ccc;
+	color: #ccc;
+	opacity: .8;
+}
+
+.main{
+	line-height: 20px;
+}
+
+a {
+  color: #ccc;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover {
+  color: #fff;
+}
+
+a:active {
+  background: hsla( 0, 100%, 100%, 0.5 );
+}
+
+.slide-out-div h1 {
+	color: white;
+	font-size: 30px;
 }
 
 .sexypanels {
@@ -32,8 +88,8 @@ body{
 	padding: 0;
 	width: 180px; /* width of menu */
 	position: absolute;
-	left: 10px;
-	top: 250px;
+	left: 0px;
+	top: 180px;
 }
 
 .sexypanels li {
@@ -41,7 +97,7 @@ body{
 }
 
 .sexypanels li a {
-	background: #333 url(media/sexypanelright.gif) no-repeat right top;
+	background: #333;
 	/*color of menu by default*/
 	font: bold 13px "Lucida Grande", "Trebuchet MS", Verdana;
 	opacity: .3;
