Tag filtering is happy now.

--- a/FlipCards/war/FlipCards.css
+++ b/FlipCards/war/FlipCards.css
@@ -61,6 +61,13 @@ h1 {
    right:0;
    margin-right: 10px;
 }
+.debug{
+   position:absolute;
+   top:0;
+   right:0;
+   margin-right: 90px;
+}
+
 
 * {
 	margin: 0;
